syntax = "proto3";

package echo;

option go_package = "proto/echo";
option java_package = "proto";
option java_outer_classname = "EchoProto";

message EchoRequest {
    string text = 1;
}

message EchoResponse {
    string text = 1;
}

service EchoService {
    rpc Echo (EchoRequest) returns (EchoResponse) {};
}
